--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/sequence/ActionLayoutSequencePage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/sequence/ActionLayoutSequencePage-description.adoc
@@ -1,9 +1,9 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-It's common to lay out a domain objects' members using the `@ActionLayout#associateWith` element, which places an action's button close to a property or collection.
-If there are more than one such action associated with an object, then the link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/ActionLayout.html#sequence[@ActionLayout#sequence] element can additionally be used to specify the order of those action buttons.
+It's common to lay out a domain objects' members using the `@ActionLayout#associateWith` attribute, which places an action's button close to a property or collection.
+If there are more than one such action associated with an object, then the link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/ActionLayout.html#sequence[@ActionLayout#sequence] attribute can additionally be used to specify the order of those action buttons.
 
-The value of the `sequence` element is a string, interpreted as a Dewey-decimal value, meaning:
+The value of the `sequence` attribute is a string, interpreted as a Dewey-decimal value, meaning:
 
     "1" < "1.0" < "1.1" < "1.1.1" < "1.1.2" < "1.2" < "1.3" < "2"
 
@@ -160,7 +160,7 @@ The top-level actions are:
 include::ActionLayoutSequencePage_noopSeqY.java[tags=class]
 ----
 +
-Note there is no "associateWith" element
+Note there is no "associateWith" attribute.
 
 * second:
 +
